--- a/css/font.css
+++ b/css/font.css
@@ -1,8 +1,8 @@
 @font-face {
     font-family: "ns_regular";
-    src: url("/font/NotoSansKR-Regular.woff2") format("woff2"),
-    url("/font/NotoSansKR-Regular.woff") format("woff"),
-    url("/font/NotoSansKR-Regular.ttf") format("truetype");
+    src: url("/..font/NotoSansKR-Regular.woff2") format("woff2"),
+    url("/..font/NotoSansKR-Regular.woff") format("woff"),
+    url("/..font/NotoSansKR-Regular.ttf") format("truetype");
     font-weight: 400;
 }
 
@@ -16,8 +16,8 @@
 
 @font-face {
     font-family: "power";
-    src: url("/font/강원교육튼튼.woff2") format("woff2"),
-    url("/font/강원교육튼튼.woff") format("woff"),
-    url("/font/강원교육튼튼.ttf") format("truetype");
+    src: url("/..font/강원교육튼튼.woff2") format("woff2"),
+    url("/..font/강원교육튼튼.woff") format("woff"),
+    url("/..font/강원교육튼튼.ttf") format("truetype");
     font-weight: normal;
 }
