--- a/css/sub_02.css
+++ b/css/sub_02.css
@@ -1,5 +1,5 @@
 @charset "UTF-8";
-@import url("../font.css");
+@import url("font.css");
 
 
 * {
@@ -105,7 +105,7 @@ h2 {
 /* === 스크롤 후 축소 상태 === */
 .nav_warp.shrink {
     height: 80px;
-    background: #fff url("/image/background.png") no-repeat;
+    background: #fff url("../image/background.png") no-repeat;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
 }
 
