--- a/css/sub_01.css
+++ b/css/sub_01.css
@@ -21,7 +21,8 @@ a {
 
 p {
     font-family: "ns_regular";
-    color: #333;
+    font-size: 18px;
+    color: #35081D;
     text-decoration: none;
 }
 
@@ -298,6 +299,212 @@ header {
 
 
 
+.store_sellect {
+    position: relative;
+    width: 100%;
+    transition: all 0.4s ease;
+}
+
+.store_sellect_warp {
+    position: absolute;
+    width: 650px;
+    height: 90px;
+    background: #fff;
+    border-radius: 46px;
+    top: -145px;
+    left: 50%;
+    transform: translateX(-50%);
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 12px;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+    transition: all 0.4s ease;
+}
+
+.store_sellect_warp li {
+    width: 300px;
+    height: 65px;
+    border-radius: 36px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+    transition: all 0.4s ease;
+}
+
+.store_sellect_warp li a {
+    color: #650A30;
+    transition: all 0.4s ease;
+}
+
+.store_sellect_warp li.active {
+    background: #650A30;
+    transition: all 0.4s ease;
+}
+
+.store_sellect_warp li.active a {
+    color: #fff;
+    transition: all 0.4s ease;
+}
+
+
+
+
+
+
+
+
+
+
+
+.Menu_sellect {
+    width: 100%;
+    margin: 100px 0 80px 0;
+    transition: all 0.4s ease;
+}
+
+.Menu_sellect_warp {
+    width: 1440px;
+    display: flex;
+    justify-content: center;
+    align-items: end;
+    gap: 80px;
+    margin: 0 auto;
+    transition: all 0.4s ease;
+}
+
+.Menu_sellect_warp a, 
+.Menu_sellect_warp a p {
+    font-size: 18px;
+    transition: all 0.4s ease;
+    gap: 7px;
+    display: flex;
+    align-items: center;
+}
+
+.Menu_sellect_warp li.active a, 
+.Menu_sellect_warp li.active a p {
+    color: #650A30;
+    font-size: 20px;
+    font-family: "ns_semibold";
+    transition: all 0.4s ease;
+}
+
+
+
+
+
+
+
+
+
+
+.menu_list_warp {
+    width: 1440px;
+    margin: 0 auto;
+    transition: all 0.4s ease;
+}
+
+.menu_list_warp ul {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 40px;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 150px;
+    transition: all 0.4s ease;
+}
+
+.cup_Icecream_menu li,
+.bar_Icecream_menu li,
+.sand_Cone_Icecream_menu li {
+    width: 300px;
+    height: 430px;
+    background: #fff;
+    box-shadow: 0 0px 15px rgba(0, 0, 0, 0.08);
+    border-radius: 30px;
+    display: flex;
+    justify-content: end;
+    align-items: center;
+    flex-direction: column;
+    gap: 30px;
+    transition: transform 0.2s ease;
+}
+
+.icecream_Cake_menu li {
+    width: 300px;
+    height: 320px;
+    background: #fff;
+    box-shadow: 0 0px 15px rgba(0, 0, 0, 0.08);
+    border-radius: 30px;
+    display: flex;
+    justify-content: end;
+    align-items: center;
+    flex-direction: column;
+    gap: 30px;
+    transition: transform 0.2s ease;
+}
+
+.creation_menu_list li,
+.drink_menu_list li {
+    width: 300px;
+    height: 380px;
+    background: #fff;
+    box-shadow: 0 0px 15px rgba(0, 0, 0, 0.08);
+    border-radius: 30px;
+    display: flex;
+    justify-content: end;
+    align-items: center;
+    flex-direction: column;
+    gap: 30px;
+    transition: transform 0.2s ease;
+}
+
+.menu_list_warp ul li:hover {
+    transform: translateY(-4px);
+}
+
+.menu_list_warp ul li a {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 40px;
+    text-align: center;
+    margin-bottom: 40px;
+    transition: all 0.4s ease;
+}
+
+.menu_list_warp ul li p {
+    width: 260px;
+    font-size: 16px;
+    display: inline-block;
+    width: 200px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    transition: all 0.4s ease;
+}
+
+.menu_list_warp ul li img {
+    width: 170px;
+    height: auto;
+    max-height: 270px;
+    object-fit: contain;
+    transition: all 0.4s ease;
+}
+
+.img_small img {
+    max-height: 230px !important;
+}
+
+
+
+
+
+
+
 
 
 
@@ -364,36 +571,52 @@ footer {
 
 
 
-
-
-
-@media (max-width: 1600px) {
-    .slider4 {
-        height: 535px;
-    }
+#topBtn {
+    position: fixed;
+    width: 70px;
+    height: 70px;
+    background: #650A30;
+    border-radius: 100%;
+    right: 5%;
+    bottom: 5%;
+    z-index: 9999;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: 5px;
+    align-items: center;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.15);
+    transition: all 0.4s ease;
 }
+
+#topBtn p {
+    color: #fff;
+    font-family: "ns_regular";
+    font-size: 16px;
+    transition: all 0.4s ease;
+}
+
+a#topBtn img {
+    width: 16px;
+    height: auto;
+    transition: all 0.4s ease;
+}
+
+
+
+
+
+
+
 
 @media (max-width: 1550px) {
 
     .nav,
-    .menu_warp,
-    .store_menu_warp,
-    .store_info,
-    .menu_list,
-    .menu p,
-    .store_menu_list,
-    .store_menu_warp p,
+    .Menu_sellect_warp,
+    .menu_list_warp,
     .footer {
         width: 90%;
         transition: all 0.4s ease;
-    }
-
-    .menu_list li:nth-child(5) {
-        display: none;
-    }
-
-    .store_info_list li {
-        padding: 5px 10px;
     }
 }
 
@@ -405,11 +628,6 @@ footer {
     .nav:hover {
         height: 80px;
     }
-
-    .video {
-        width: 100%;
-        height: 100%;
-    }
 }
 
 @media (max-width: 1320px) {
@@ -420,21 +638,8 @@ footer {
     .gnb_title {
         padding: 0 40px 0 40px;
     }
-
-    .store_menu_list li:nth-child(5) {
-        display: none;
-    }
 }
 
-@media (max-width: 1200px) {
-    .slider4 {
-        height: 475px;
-    }
-
-    .menu_list li:nth-child(4) {
-        display: none;
-    }
-}
 
 @media (max-width: 1060px) {
     .gnb_title {
@@ -444,43 +649,9 @@ footer {
     .gnb p {
         font-size: 18px;
     }
-
-    .store_menu_list li:nth-child(4) {
-        display: none;
-    }
 }
 
 @media (max-width: 1023px) {
-
-    html,
-    body {
-        height: auto;
-        scroll-snap-type: none;
-        overflow-x: hidden;
-    }
-
-    section {
-        width: auto !important;
-        height: auto;
-        scroll-snap-align: none;
-    }
-
-    header {
-        height: auto;
-    }
-
-    .video-wrap {
-        margin-top: 100px;
-        width: 100%;
-        aspect-ratio: 16 / 9;
-        position: relative;
-        z-index: 0;
-    }
-
-    .dot-nav {
-        display: none;
-    }
-
     .nav {
         height: 100px;
         position: relative;
@@ -559,37 +730,70 @@ footer {
 
 
 
-
-    .menu {
-        padding: 0;
-        margin: 120px 0 140px;
-        height: auto;
+    .visual {
+        height: 300px;
     }
 
-    .store_menu {
-        padding: 0;
-        margin: 120px 0 270px;
-        height: auto;
-        padding: 100px 0 100px 0;
+    .visual img {
+        display: none;
     }
 
-    .menu_warp {
-        height: 800px;
+    .visual h2 {
+        font-size: 33px;
+        color: #650A30;
+        position: relative;
+        width: auto;
+        display: flex;
+        justify-content: center;
     }
 
-    .store_menu_warp {
-        height: 700px;
+    .Menu_sellect {
+        margin: 60px 0 50px 0;
     }
 
-    .store_info_warp {
-        bottom: -130px;
+    .Menu_sellect_warp {
+        gap: 50px;
     }
 
-    .sns_warp {
-        padding: 0;
-        height: auto;
-        margin-bottom: 50px;
-    }
+
+    .store_sellect_warp {
+    width: 550px;
+    height: 70px;
+    top: -120px;
+}
+
+.store_sellect_warp li {
+    width: 250px;
+    height: 50px;
+    border-radius: 36px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+}
+
+.store_sellect_warp li.active a,
+.store_sellect_warp li.active a p {
+    font-size: 18px;
+}
+
+.store_sellect_warp li a,
+.store_sellect_warp li a p {
+    font-size: 18px;
+}
+
+.Menu_sellect_warp li.active a,
+.Menu_sellect_warp li.active a p {
+    font-size: 18px;
+}
+
+.Menu_sellect_warp li a,
+.Menu_sellect_warp li a p {
+    font-size: 16px;
+}
+
+
+
 
     .footer h1:nth-child(1) {
         display: none;
@@ -728,77 +932,44 @@ footer {
         z-index: 9999 !important;
     }
 
-    .menu_bar li:nth-child(1), .menu_bar li:nth-child(2), .menu_bar li:nth-child(3), .menu_bar li:nth-child(4) {
-        margin: 0 -5px 0 -5px;
-    }
-
     .footer h1 img {
-    width: 150px;
-    height: auto;
-}
-}
-
-@media (max-width: 930px) {
-
-    .menu_bar {
-        flex-wrap: wrap;
-    }
-
-    .menu_bar li {
-        flex: 1 1 45%;
-        max-width: 270px;
-    }
-
-    .menu_list li:nth-child(3) {
-        display: none;
-    }
-
-    .menu_bar li:nth-child(1) {
-        border-bottom-right-radius: 25px;
-    }
-
-    .menu_bar li:nth-child(2) {
-        clip-path: polygon(100% 0, 100% 100%, 0 100%, 5% 0);
-        border-top-left-radius: 25px;
-        border-top-right-radius: 10px;
-    }
-
-    .menu_bar li:nth-child(3) {
-        clip-path: polygon(100% 0, 95% 100%, 0 100%, 0 0);
-        border-bottom-right-radius: 25px;
-        border-bottom-left-radius: 10px;
-    }
-
-    .menu_bar li:nth-child(4) {
-        clip-path: polygon(100% 0, 100% 100%, 0 100%, 5% 0);
-        border-top-left-radius: 25px;
-        border-top-right-radius: 10px;
-    }
-
-    .store_info_list {
-        gap: 10px 12px;
+        width: 150px;
+        height: auto;
     }
 }
 
 @media (max-width: 870px) {
 
-    .store_info_list li {
-        flex-wrap: wrap;
-        font-size: 15px;
-    }
-
     .gnb_title {
         padding: 0 20px 0 20px;
+    }
+
+    #topBtn {
+        width: 60px;
+        height: 60px;
+        gap: 3px;
+    }
+
+    #topBtn p {
+        color: #fff;
+        font-family: "ns_regular";
+        font-size: 16px;
+    }
+
+    a#topBtn img {
+        width: 15px;
+        height: auto;
     }
 }
 
 @media (max-width: 770px) {
 
-    h2,
-    .menu_warp p,
-    .store_menu_warp p,
-    .store_info h2>a {
-        font-size: 33px;
+    .visual {
+        height: 280px;
+    }
+
+    h2 {
+        font-size: 30px;
     }
 
     .nav p>.hamburger img {
@@ -810,45 +981,134 @@ footer {
         align-items: center;
     }
 
-    .menu {
-        margin: 100px 0 0 0;
+
+    .Menu_sellect {
+        margin: 60px 0 50px 0;
     }
 
-    .store_menu_list li:nth-child(3) {
+
+
+
+
+
+
+    .menu_list_warp ul li a {
+        gap: 30px;
+        margin-bottom: 30px;
+    }
+
+
+    .store_sellect_warp {
+        width: 450px;
+        height: 60px;
+        top: -110px;
+    }
+
+    .store_sellect_warp li.active a {
+        font-size: 16px;
+    }
+
+    .store_sellect_warp li a {
+        font-size: 16px;
+    }
+
+    .store_sellect_warp li {
+        width: 200px;
+        height: 45px;
+        border-radius: 30px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        cursor: pointer;
+    }
+
+
+
+
+
+
+    .Menu_sellect_warp {
+        gap: 70px;
+    }
+
+    .Menu_sellect_warp li.active a,
+    .Menu_sellect_warp li a {
+        font-size: 16px;
+    }
+
+    .Menu_sellect_warp li.active a p,
+    .Menu_sellect_warp li a p {
         display: none;
     }
 
-    .menu_warp {
-        height: 750px;
+
+
+
+
+    .menu_list_warp ul {
+        flex-wrap: wrap;
+        gap: 20px;
     }
 
-    .store_menu_warp {
-        height: 650px;
+    .menu_list_warp ul li {
+        width: calc(45% - 10px);
     }
 
-    .menu {
-        margin-top: 100px;
+    .menu_list_warp ul li p {
+        width: 220px;
+        font-size: 14px;
+        transition: all 0.4s ease;
     }
 
-    .store_menu {
-        padding: 100px 0 100px 0;
-        margin: 100px 0 290px;
+    .menu_list_warp ul li img {
+        width: auto;
+        max-height: 170px;
+        max-width: 160px;
+        transition: all 0.4s ease;
     }
 
-    .store_info_warp {
-        bottom: -180px;
-        padding: 30px 0 20px 0;
+
+
+
+
+    .cup_Icecream_menu li,
+    .bar_Icecream_menu li,
+    .sand_Cone_Icecream_menu li {
+        width: 260px;
+        height: 280px;
     }
 
-    .store_info {
-        flex-direction: column;
-        gap: 30px;
+    .icecream_Cake_menu li {
+        width: 260px;
+        height: 280px;
     }
 
-    .store_info_list {
-        justify-content: center;
-        gap: 15px;
+    .drink_menu_list li {
+        width: 260px;
+        height: 280px;
     }
+
+    .creation_menu_list li {
+        width: 260px;
+        height: 250px;
+    }
+
+    .img_small img {
+        max-height: 140px !important;
+    }
+
+    .cup_small img {
+        max-height: 130px !important;
+    }
+
+
+
+
+
+
+
+
+
 
     .footer {
         flex-direction: column;
@@ -867,119 +1127,101 @@ footer {
     }
 }
 
-@media (max-width: 768px) {
-    .slider4 {
-        height: 425px;
-    }
-}
 
 @media (max-width: 600px) {
-
-    .menu_list li {
-        gap: 20px;
-    }
-
     .mobile-menu {
         width: 300px;
     }
-
-    .menu_warp {
-        height: 700px;
-    }
-
-    .store_menu_warp {
-        height: 600px;
-    }
-
-    .menu_list, .store_menu_list {
-        gap: 20px;
-    }
-
-    .menu_bar li.active::before,
-    .menu_bar li.active::after,
-    .store_menu_bar li.active::before,
-    .store_menu_bar li.active::after {
-        display: none;
-    }
-
-    .sns_warp {
-        margin-bottom: 150px;
-    }
-
-    .slider_controls {
-        position: relative;
-    }
-
-    .slider_controls span {
-        position: absolute;
-        bottom: -600px;
-    }
-
-    #prev {
-        left: 35%;
-        transition: all 0.4s ease;
-    }
-
-    #next {
-        right: 35%;
-        transition: all 0.4s ease;
-    }
-
 }
 
 @media (max-width: 515px) {
-    .menu_warp {
-        height: 650px;
+
+    .visual {
+        height: 220px;
     }
 
-    .store_menu_warp {
-        height: 550px;
+    .visual h2 {
+        font-size: 26px;
+        top: 70%;
     }
 
-    .menu {
-        margin-top: 80px;
+    .Menu_sellect_warp {
+        gap: 40px;
     }
 
-    .store_info {
-        gap: 30px;
+    .store_sellect_warp {
+        width: 350px;
+        height: 60px;
+        top: -82px;
     }
 
-    .store_info_warp {
-        bottom: -220px;
-        padding: 40px 0 50px 0;
+    .store_sellect_warp li {
+        width: 170px;
     }
 
-    .store_menu {
-        padding: 80px 0 80px 0;
-        margin: 80px 0 300px;
+    .store_sellect_warp li a,
+    .store_sellect_warp li.active a,
+    .Menu_sellect_warp li.active a, 
+    .Menu_sellect_warp li a {
+        font-size: 14px;
     }
 
-    .menu_list img {
-        max-height: 280px;
+    .Menu_sellect {
+        margin: 50px 0 20px 0;
     }
 
-    .store_menu_list img {
-        max-height: 200px;
+    .cup_Icecream_menu li,
+    .bar_Icecream_menu li,
+    .sand_Cone_Icecream_menu li {
+        height: 230px;
+    }
+
+    .icecream_Cake_menu li {
+        height: 210px;
+    }
+
+    .drink_menu_list li {
+        height: 240px;
+    }
+
+    .creation_menu_list li {
+        height: 200px;
+    }
+
+    .menu_list_warp ul li img {
+        max-height: 150px;
+        max-width: 130px;
+    }
+
+    .img_small img {
+        max-height: 120px !important;
+    }
+
+    .cup_small img {
+        max-height: 120px !important;
+    }
+
+
+
+
+
+    .menu_list_warp ul li a {
+        gap: 20px;
+        margin-bottom: 20px;
+    }
+
+    .menu_list_warp ul li p {
+        font-size: 13px;
+        width: 140px;
     }
 
     .footer_list_01 {
         gap: 30px;
         transition: all 0.4s ease;
     }
-
-    #prev {
-        left: 25%;
-    }
-
-    #next {
-        right: 25%;
-    }
 }
 
 @media (max-width: 480px) {
-    .slider4 {
-        height: 375px;
-    }
 
     .mobile-menu {
         width: 230px;
@@ -1001,29 +1243,27 @@ footer {
         padding: 0;
     }
 
-    .menu_bar li span, .store_menu_bar li span {
-        font-size: 16px;
+    #topBtn {
+        width: 50px;
+        height: 50px;
+        gap: 1px;
     }
 
-    .slider_controls span {
-        bottom: -550px;
+    #topBtn p {
+        color: #fff;
+        font-family: "ns_regular";
+        font-size: 12px;
     }
 
-    #prev {
-        left: 25%;
-    }
-
-    #next {
-        right: 25%;
+    a#topBtn img {
+        width: 12px;
+        height: auto;
     }
 }
 
 @media (max-width: 400px) {
 
-    h2,
-    .menu_warp p,
-    .store_menu_warp p,
-    .store_info h2>a {
+    h2 {
         font-size: 28px;
     }
 
@@ -1031,67 +1271,44 @@ footer {
         right: 15px;
     }
 
-    .menu_bar li,
-    .store_menu_bar li {
-        width: 100%;
-        height: 50px;
-        border-radius: 5px;
+    .store_sellect_warp {
+        width: 230px;
+        top: -80px;
     }
 
-    .menu {
-        margin-top: 50px;
+    .cup_Icecream_menu li,
+    .bar_Icecream_menu li,
+    .sand_Cone_Icecream_menu li {
+        height: 205px;
     }
 
-    .menu_warp {
-        height: 500px;
+    .icecream_Cake_menu li {
+        height: 180px;
     }
 
-    .store_menu_warp {
-        height: 400px;
+    .drink_menu_list li {
+        height: 200px;
     }
 
-    .store_menu {
-        padding: 50px 0 50px 0;
-        margin: 50px 0 300px;
+    .creation_menu_list li {
+        height: 180px;
     }
 
-    .slider_controls span {
-        bottom: -490px;
+    .menu_list_warp ul li img {
+        max-height: 130px;
+        max-width: 100px;
     }
 
-    .sns {
-        gap: 40px;
+    .img_small img {
+        max-height: 100px !important;
     }
 
-    .sns_warp {
-        margin-bottom: 110px;
+    .cup_small img {
+        max-height: 100px !important;
     }
 
-    .menu_list img {
-        max-height: 190px;
-    }
-
-    .store_menu_list img {
-        max-height: 160px;
-    }
-
-    .menu_bar li:nth-child(1) {
-        border-bottom-right-radius: 15px;
-    }
-
-    .menu_bar li:nth-child(2) {
-        border-top-left-radius: 15px;
-        border-top-right-radius: 5px;
-    }
-
-    .menu_bar li:nth-child(3) {
-        border-bottom-right-radius: 15px;
-        border-bottom-left-radius: 5px;
-    }
-
-    .menu_bar li:nth-child(4) {
-        border-top-left-radius: 15px;
-        border-top-right-radius: 5px;
+    .menu_list_warp ul li p {
+        width: 120px;
     }
 }
 
@@ -1112,39 +1329,50 @@ footer {
     .footer_list_01 {
         gap: 10px;
     }
+
+    .Menu_sellect_warp {
+        gap: 30px;
+    }
+
+    .cup_Icecream_menu li,
+    .bar_Icecream_menu li,
+    .sand_Cone_Icecream_menu li {
+        height: 195px;
+    }
+
+    .icecream_Cake_menu li {
+        height: 170px;
+    }
+
+    .drink_menu_list li {
+        height: 190px;
+    }
+
+    .creation_menu_list li {
+        height: 170px;
+    }
+
+    .menu_list_warp ul li img {
+        max-height: 120px;
+        max-width: 90px;
+    }
+
+    .img_small img {
+        max-height: 90px !important;
+    }
+
+    .cup_small img {
+        max-height: 90px !important;
+    }
+
+    .menu_list_warp ul li p {
+        width: 90px;
+    }
 }
 
 @media (max-width: 320px) {
-
-    .menu_warp {
-        height: 530px;
-    }
-
-    .store_menu_warp {
-        height: 500px;
-    }
-
-    .store_menu {
-        padding: 40px 0 40px 0;
-        margin: 50px 0 300px;
-    }
-
-    .store_info_warp {
-        bottom: -220px;
-    }
-
-    h2,
-    .menu_warp p,
-    .store_menu_warp p,
-    .store_info h2>a {
+    h2 {
         font-size: 22px;
-    }
-
-    .menu_bar li,
-    .store_menu_bar li {
-        width: 180px;
-        height: 45px;
-        border-radius: 5px;
     }
 
     .menu_bar li span,
@@ -1166,16 +1394,5 @@ footer {
 
     .footer_list_01 {
         gap: 10px;
-    }
-
-    .store_info h2>a {
-        font-size: 20px;
-    }
-
-    .store_info_list li {
-        font-size: 13px;
-    }
-    .sns {
-        margin-top: 40px;
     }
 }
