--- a/css/index.css
+++ b/css/index.css
@@ -763,6 +763,43 @@ footer {
 
 
 
+#topBtn { 
+	position: fixed;
+    width: 70px;
+    height: 70px;
+    background: #650A30;
+    border-radius: 100%;
+	right: 5%;
+	bottom: 5%;
+	z-index: 9999;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: 5px;
+    align-items: center;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.15);
+    transition: all 0.4s ease;
+}
+
+#topBtn p {
+    color: #fff;
+    font-family: "ns_regular";
+    font-size: 16px;
+    transition: all 0.4s ease;
+}
+
+a#topBtn img {
+    width: 16px;
+    height: auto;
+    transition: all 0.4s ease;
+}
+
+
+
+
+
+
+
 
 @media (max-width: 1600px) {
     .slider4 {
@@ -1187,6 +1224,23 @@ footer {
     .gnb_title {
         padding: 0 20px 0 20px;
     }
+
+    #topBtn {
+        width: 60px;
+        height: 60px;
+        gap: 3px;
+    }
+
+    #topBtn p {
+        color: #fff;
+        font-family: "ns_regular";
+        font-size: 16px;
+    }
+
+    a#topBtn img {
+        width: 15px;
+        height: auto;
+    }
 }
 
 @media (max-width: 770px) {
@@ -1398,7 +1452,8 @@ footer {
         padding: 0;
     }
 
-    .menu_bar li span, .store_menu_bar li span {
+    .menu_bar li span,
+    .store_menu_bar li span {
         font-size: 16px;
     }
 
@@ -1412,6 +1467,23 @@ footer {
 
     #next {
         right: 25%;
+    }
+
+    #topBtn {
+        width: 50px;
+        height: 50px;
+        gap: 1px;
+    }
+
+    #topBtn p {
+        color: #fff;
+        font-family: "ns_regular";
+        font-size: 12px;
+    }
+
+    a#topBtn img {
+        width: 12px;
+        height: auto;
     }
 }
 
