--- a/css/sub_02.css
+++ b/css/sub_02.css
@@ -802,7 +802,15 @@ footer {
     }
 
     .nav p>.hamburger img {
+        top: 25px;
         right: 20px;
+    }
+
+    .nav,
+    .nav_warp,
+    .nav_warp.shrink,
+    .nav_warp:hover {
+        height: 80px;
     }
 
     .nav {
@@ -977,6 +985,22 @@ footer {
 }
 
 @media (max-width: 480px) {
+
+    .nav p>.hamburger img {
+        top: 15px;
+    }
+
+    .nav,
+    .nav_warp,
+    .nav_warp.shrink,
+    .nav_warp:hover {
+        height: 60px;
+    }
+
+    .video-wrap {
+        margin-top: 60px;
+    }
+
     .slider4 {
         height: 375px;
     }
