--- a/css/index.css
+++ b/css/index.css
@@ -1261,7 +1261,7 @@ a#topBtn img {
     .nav_warp,
     .nav_warp.shrink,
     .nav_warp:hover {
-        height: 80px;
+        height: 80px !important;
     }
 
     .video-wrap {
