--- a/css/sub_01.css
+++ b/css/sub_01.css
@@ -973,7 +973,7 @@ a#topBtn img {
     .nav_warp,
     .nav_warp.shrink,
     .nav_warp:hover {
-        height: 80px;
+        height: 80px !important;
     }
 
     .visual {
